style: fix icon not align

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -150,6 +150,7 @@
 
       > .@{prefix}-menu__item {
         text-align: center;
+        padding: 0;
       }
     }
 
